2020-09-11 21:00:00
===================
Whitespace fixes
Array subscript wrappers {} => [] for PHP 7 compatibility
http://punbb.informer.com/ => https://punbb.informer.com/

Variable name typo fixed - @MioVisman

2017-11-18 18:00:00
===================
Added del tag for Strikethrough text

2017-11-18 16:36:00
===================
Synched to upstream master as of 2017-01-12
DB Class constructors and destructors syntax update
InnoDB transaction wrapper, div styling
Copyright year update
PHP min version checks for extension installs
!= changed to !==
function re-definition avoidance check
class method visibility and scope fixed
Install time InnoDB check for availability
error reporting with better clarity
Search list pages start and end limits set correctly
coding foreach instead of for with counter
forum_desc field added to query
Initial import of PunBB v1.4.4
Forked to https://github.com/apmuthu/PunBB
