@@ -1,3 +1,8 @@
+2020-09-15 11:33:00
+===================
+Fix blocking 5 or more character TLDs in domain
+Optional fix to block specific TLDs (commented out by default)
+
 2020-09-11 21:00:00
 ===================
 Whitespace fixes
